fixed navbar z-index

--- a/public/styles/hero.css
+++ b/public/styles/hero.css
@@ -29,6 +29,9 @@
 }
 
 @media only screen and (max-width: 575px) {
+    #hero {
+        margin-top: 10px;
+    }
     #intro {
         width: calc(100dvw - 2%) !important;
         padding: 0 3%;
