--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -196,6 +196,10 @@ i {
 #socials-footer {
     display: none;
 }
+
+#navbar-mobile {
+    display: none;
+}
 @media only screen and (max-width: 575px) {
     #ham-menu {
         display: block;
@@ -234,45 +238,49 @@ i {
         align-items: inherit;
         margin-top: 2%;
         overflow-y: hidden;
+        z-index: 10;
     }
 
+    
     header i {
         position: absolute;
         right: 2%;
     }
-    nav ul, nav {
+
+    #navbar {
+        display: none;
+    }
+
+    #navbar-mobile{
+        display: flex;
         flex-direction: column;
-    }
-
-    nav {
-        background-color: var(--card-color);
-    }
-
-    nav {
-        position: relative;
+        position: fixed;
         top: 0;
-        height: calc(100vh);
-        width: 65%;
-        padding: 10px;
-        box-sizing: content-box;
+        right: 0;
+    }
+
+    #navbar-mobile {
         justify-content: center;
-        font-size: 26px;
-        overflow: hidden;
+        align-items: center;
+        height: 100dvh;
+        width: 0;
+        background-color: var(--card-color);
         transform: translateX(100%);
-        transition: transform .3s ease;
-        z-index: 0;
-    }
-
-    nav.active{
-        transform: translateX(0);
         transition: .3s ease;
-        z-index: 1000;
     }
 
-    nav ul {
-        /* background-color: purple; */
-        height: 40vh;
+    #navbar-mobile.active{
+        transition: .3s ease;
+        width: 65%;
+        transform: translateX(0);
+    }
+    #navbar-mobile ul {
+        display: flex;
+        flex-direction: column;
+        height: 40%;
         width: 60%;
+        font-size: 1.5rem;
+        padding: 10px;
     }
 
     #socials, #gmail-button {
